build/k8s-manifests/demoapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp1
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapp1
  template:
    metadata:
      labels:
        app: demoapp1
        app.kubernetes.io/name: demoapp1
    spec:
      containers:
      - name: demoapp1
        image: demoapp1:latest
        imagePullPolicy: Never
        command: ["./demoapp1"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp1
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp1 
spec:
  selector:
    app: demoapp1
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
