build/k8s-manifests/demoapp2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp2
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapp2
  template:
    metadata:
      labels:
        app: demoapp2
        app.kubernetes.io/name: demoapp2
    spec:
      containers:
        - name: demoapp2
          image: demoapp2:latest
          imagePullPolicy: Never
          command: ["./demoapp2"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp2
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp2
spec:
  selector:
    app: demoapp2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
