build/k8s-manifests/demoapp3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp3
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demoapp3
  template:
    metadata:
      labels:
        app: demoapp3
        app.kubernetes.io/name: demoapp3
    spec:
      containers:
        - name: demoapp3
          image: demoapp3:latest
          imagePullPolicy: Never
          command: ["./demoapp3"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp3
  namespace: k8sdemoapps
  labels:
    app.kubernetes.io/name: demoapp3 
spec:
  selector:
    app: demoapp3
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
